# Alkali

./: .gitignore  CMakeLists.txt  LICENSE  README.md  c.mlir  cpu_load.ep2  example.ep2  example.ep2.txt  example.mlir  example_many.ep2  frontend.sh  gen_cpp.sh  ids.ep2  ifelse.ep2  l2_echo.ep2  meep.mlir  netronome.sh  netronomecut.sh  nfchainnew.ep2  nfchainpipe.ep2  output.mlir  partition.sh  run.sh  run_c.sh  run_fpga_cut.sh  run_llvm.sh  run_netronome_cut.sh  runfpga.sh  send_to_ditto.sh  send_to_pikachu.sh  splitfpga.sh  table.ep2  transport_rx.all.ep2  transport_rx.ep2
Polygeist/: .gitignore  CMakeLists.txt  version
ep2c/: AST.cpp  CMakeLists.txt  MLIRGen.cpp  ep2c.cpp
ep2c-opt/: CMakeLists.txt  ep2c-opt.cpp
ep2cfpga/: CMakeLists.txt  ep2cfpga.cpp
example_outputs/outs-netronome/out-netronome-cpu_load/: Makefile  (+1 more)
include/: CMakeLists.txt
include/ep2/: Utilities.h
lib/: CMakeLists.txt
lib/ep2/: ArchMappingPass.cpp  AtomAnalysis.cpp  BufferAnalysis.cpp  BufferToValuePass.cpp  CFToPredPass.cpp  CMakeLists.txt  CollectHeaderPass.cpp  ContextAnalysis.cpp  ContextBufferizationAnalysis.cpp  ContextRefTypeAssignPass.cpp  ContextToArgumentPass.cpp  ContextTypeInferencePass.cpp  ControllerAnalysis.cpp.bk  Dialect.cpp  EP2LinearizePass.cpp  EmitFPGA.cpp  EmitFPGAController.cpp  EmitFPGAHelper.cpp  EmitFPGATop.cpp  EmitFilesPass.cpp  EmitLLVMHeaderPass.cpp  EmitNetronomePass.cpp  ExtrEmitOffsetAnalysis.cpp  FunctionRewritePass.cpp  GprPromotionPass.cpp  HandlerDependencyAnalysis.cpp  HandlerInOutAnalysis.cpp  HandlerReplicationPass.cpp  LocalAllocAnalysis.cpp  LowerEmitcPass.cpp  LowerIntrinsicsPass.cpp  LowerLLVMPass.cpp  LowerMemcpyPass.cpp  LowerNoctxswapPass.cpp  LowerStructAnalysis.cpp  LowerToLLVMPass.cpp  NetronomePlacementAnalysis.cpp  NopEliminationPass.cpp  PipelineHandlerPass.cpp  RepackStructTypesPass.cpp  (+3 more)
lib/ep2/Dialect/: Dialect.cpp  MemorySlotInstance.cpp
lib/ep2/MakefileHelpers/: netronome.prefix  netronome.suffix
lib/ep2/Passes/: AtomicIdentificationPass.cpp  BufferReusePass.cpp  CanonicalizePass.cpp  ContextToMemPass.cpp  ControllerGenerationPass.cpp  DeadFieldEliminatePass.cpp  DeadParameterEliminatePass.cpp  FPGABufferToStoragePass.cpp  GlobalToPartitionPass.cpp
lib/ep2/Passes/Conversion/: LiftLLVMPass.cpp  LiftUtils.cpp  SplitFunction.cpp
lib/ep2/Passes/Mapping/: MappingSolver.cpp  MappingUtils.cpp  PerformanceModel.cpp  PipelineCanonicalizePass.cpp  PipeliningPass.cpp
out-example/: canon.mlir  example.mlir  process_desc.c  prog_hdr.h  receive_desc.c
out-l2_echo/: canon.mlir  l2_echo.mlir  main_recv.c  prog_hdr.h
out-netronome-cpu_load/: canon.mlir  cmd.sh  load_table_add_1.c  prog_hdr.h
out-netronome-example/: canon.mlir  example.mlir  process_desc.c  prog_hdr.h  receive_desc.c
out-netronome-example_many/: canon.mlir  example_many.mlir  process_desc2.c  prog_hdr.h  receive_desc.c
out-netronome-ids/: Makefile  canon.mlir  ids.mlir  msg_reassemble_1.c  process_packet_1.c  prog_hdr.h
out-netronome-ifelse/: canon.mlir  ifelse.mlir  my_handler_event.c  prog_hdr.h
out-netronome-l2_echo/: main_recv.c  prog_hdr.h
out-netronome-table/: canon.mlir  load_table.c  prog_hdr.h  table.mlir
out-netronome-transport_rx/: Makefile  OoO_detection1.c  OoO_detection2.c  OoO_detection_1.c  OoO_detection_2.c  ack_gen.c  ack_gen1.c  ack_gen2.c  ack_gen_1.c  ack_gen_2.c  canon.mlir  cmd.sh  dma_write.c  net_send.c  out.mlir  process_packet1.c  process_packet2.c  process_packet3.c  process_packet4.c  process_packet_1.c  process_packet_2.c  process_packet_3.c  process_packet_4.c  prog_hdr.h  transport_rx.mlir
outs-netronome/out-netronome-cpu_load/: process_packet_1.c
outs-netronome/out-netronome-example/: cmd.sh  example.mlir  prog_hdr.h
outs-netronome/out-netronome-ids/: cmd.sh
outs-netronome/out-netronome-l2_echo/: canon.mlir  l2_echo.mlir
outs-netronome/out-netronome-nfchainpipe/: Makefile  OoO_detection1_1.c  OoO_detection1_2.c  OoO_detection1_3.c  OoO_detection1_4.c  OoO_detection2_1.c  OoO_detection2_2.c  OoO_detection2_3.c  nfchainpipe.mlir  process_packet_3.c  process_packet_4.c
outs-netronome/out-netronome-nfchainpipe-MOD/: OoO_detection1_1.c  OoO_detection1_2.c  OoO_detection1_3.c  OoO_detection1_4.c  OoO_detection2_1.c  OoO_detection2_2.c  OoO_detection2_3.c  OoO_detection2_4.c  process_packet_1.c  process_packet_3.c
outs-netronome/out-netronome-transport_rx/: OoO_detection_1.c  OoO_detection_2.c  ack_gen_1.c  ack_gen_2.c  process_packet_2.c  process_packet_4.c  prog_hdr.h  transport_rx.mlir
outs-netronome/out-netronome-transport_rx.all/: Makefile  OoO_detection_1.c  OoO_detection_2.c  OoO_detection_3.c  ack_gen_1.c  canon.mlir  process_packet_1.c  prog_hdr.h
patches/: translateToCpp.patch
runtime-llvm/: Makefile  driver.c  ep2_defs.inc.h  extern.h  externs.c  main.c  runtime.c  runtime.h
runtime_lib/fpga_runtime/: top.sv
runtime_lib/netronome_runtime/: README.md  copybin.sh
scripts/: alkalic  extract_struct_def.py  fpga_compile.sh  netronome_compile.sh  partition.sh  run_c.sh
tests/: buf_to_value.ep2  bug_1_ctxname.ep2  cmp.ep2  controller_gen.ep2  cse.ep2  ctx_assign_type.ep2  example.ep2  flextoemini.ep2  global.ep2  ifelse.ep2  ifelse_nested.ep2  l2_echo.ep2.txt  no_buf_table_test.txt  table_test.txt  transport_rx.ep2.txt
tests/c_demo/: generic_handlers.h  l2_echo.c
tests/experiments/: cpu_load.ep2.txt  cpu_load_fpga.ep2  ids.ep2.txt  ipsec.ep2.txt  l2_echo.ep2.txt  transport_rx.all.ep2  transport_rx.ep2.txt
tests/experiments_c/: alkali.h  generic_handlers.h  nfchain.c  pipeline.c  pipeline_include.c  struct_split.c  test.c  transport_rx.c
tests/fpga/: ipsec.ep2.txt  transport_rx.ep2.txt  transport_rx_opt.ep2
tests/output/: buf_to_value.buffer_to_value.mlir  buf_to_value.context_to_argument.mlir  cmp.mlir  ctx_assign_type.mlir  example.mlir  example.opt.mlir  ifelse.mlir  ifelse.opt.mlir  ipsec.mlir  l2_echo.mlir  l2_echo.opt.mlir  table_test.mlir  transport_rx.mlir
tests/pipeline_test/: nopipeline.mlir  nopipeline_small.mlir  nopipeline_test.ep2  pipeline_test.ep2
tests/specs/: fpga.json
(+155 files in other folders)
